# OpenAcidMineDrainage

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  WARP.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
OpenSedimentationManager/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  WARP.md  docker-compose.override.yml  docker-compose.yml  env.example  monitoring.Dockerfile  pyproject.toml  tox.ini
OpenSedimentationManager/.github/workflows/: ci.yml
OpenSedimentationManager/config/: config.example.yaml
OpenSedimentationManager/monitoring/: prometheus.yml
OpenSedimentationManager/src/open_sedimentation_manager/: __init__.py  api.py  cli.py
OpenSedimentationManager/src/open_sedimentation_manager/analysis/: __init__.py  bathymetry.py  dredging.py
OpenSedimentationManager/src/open_sedimentation_manager/compliance/: __init__.py  report.py
OpenSedimentationManager/src/open_sedimentation_manager/export/: sqlite_export.py
OpenSedimentationManager/src/open_sedimentation_manager/io/: __init__.py  ingestion.py
OpenSedimentationManager/src/open_sedimentation_manager/llm/: agents.py  agents_backup.py
OpenSedimentationManager/src/open_sedimentation_manager/ml/: __init__.py  model.py
OpenSedimentationManager/src/open_sedimentation_manager/modeling/: __init__.py  sediment.py
OpenSedimentationManager/src/open_sedimentation_manager/notifications/: __init__.py  notify.py
OpenSedimentationManager/src/open_sedimentation_manager/realtime/: __init__.py  monitoring.py
OpenSedimentationManager/src/open_sedimentation_manager/utils/: __init__.py  geoutils.py
OpenSedimentationManager/src/open_sedimentation_manager/vegetation/: __init__.py  management.py
OpenSedimentationManager/src/open_sedimentation_manager/work_orders/: __init__.py  generator.py
OpenSedimentationManager/tests/: test_basic.py
data/: README.md  example.csv
src/oamd/: __init__.py  ai_agent.py  alerts.py  analyze.py  api.py  cli.py  data_models.py  geochem.py  hydro.py  ingest.py  ml_forecast.py  regulatory.py  reporting.py  utils.py  validation.py  visualize.py
src/oamd/templates/: report.html.jinja
tests/: test_analyze.py  test_api.py  test_forecast.py  test_validation.py
