[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "OpenSedimentationManager"
version = "0.1.0"
description = "Advanced system for bathymetric analysis, sediment transport modeling, vegetation management, and maintenance planning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenSedimentationManager Developers" }
]
keywords = ["bathymetry", "sediment", "hydrology", "remote-sensing", "geospatial", "environmental"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "pandas>=2.0",
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "xarray>=2023.6",
  "geopandas>=0.14",
  "shapely>=2.0",
  "fiona>=1.9",
  "pyproj>=3.6",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "typer>=0.12",
  "rich>=13.7",
  "tqdm>=4.66",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
# Optional integrations that may require system libraries
hydro = ["xarray>=2023.6", "netCDF4>=1.6"]
pybathy = ["pybathy"]
gdal = ["gdal"]
llm = ["openai>=1.0.0"]
datasette = ["datasette>=0.64", "sqlite-utils>=3.36"]

[project.scripts]
osm = "open_sedimentation_manager.cli:main"
osm-api = "open_sedimentation_manager.api:app"

[tool.hatch.build.targets.wheel]
packages = ["src/open_sedimentation_manager"]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=7.0",
]
[tool.hatch.envs.test.scripts]
test = "pytest -q"

